@@ -172,6 +172,9 @@ IATI出版社
 #list_donor_back_text
 返回到捐款人名单
 
+#list_sector_back_text
+返回列表行业
+
 #view_donor_transactions_text
 在{year}总支出由{donor}
 
