@@ -172,6 +172,9 @@ View all
 #list_donor_back_text
 Back to Donor list
 
+#list_sector_back_text
+Back to Sector list
+
 #view_donor_transactions_text
 Total spend by {donor} in {year}
 
