@@ -172,6 +172,9 @@ Voir tous
 #list_donor_back_text
 Retour à la liste des donateurs
 
+#list_sector_back_text
+Retour à la liste Secteur
+
 #view_donor_transactions_text 
 Dépenses totales pour {donor} en {year}
 
