@@ -172,6 +172,9 @@ IATI प्रकाशक
 #list_donor_back_text
 वापस दाता की सूची पर
 
+#list_sector_back_text
+वापस सेक्टर की सूची पर
+
 #view_donor_transactions_text
 {year} में {donor} द्वारा कुल खर्च
 
