@@ -172,6 +172,9 @@ IATIパブリッシャ
 #list_donor_back_text
 バックドナーリストに
 
+#list_sector_back_text
+バックセクタリストへ
+
 #view_donor_transactions_text
 {year}内の {donor}の による総支出
 
