@@ -172,6 +172,9 @@ Ver todo
 #list_donor_back_text
 Volver a la lista de los donantes
 
+#list_sector_back_text
+Volver a la lista de Sector
+
 #view_donor_transactions_text
 Gasto total para {donor} en {year}
 
