@@ -24,7 +24,7 @@
 		</table>
 	</div>
 	<div class="center_wrap">
-		<a href="#view=sectors" class="button">{view_all_text}</a>
+		<a href="#view=sectors" class="button">{list_sector_back_text}</a>
 	</div>
 </div>
 {sector_activities_data_description}
