@@ -4,6 +4,8 @@ Fixed padding sizes for tables
 Fixed translations for Donor titles in tables
 Changed Donor subtitle for tables to be more descriptive
 Added sorting of columns for tables
+Changed "View All" links to "Back to Donor / Sector list"
+Fixed translations accordingly
 
 
 Development Portal (2014-07-23 shi)
